[gd_scene load_steps=4 format=2]

[ext_resource path="res://fuente/MEGAMAN10.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://pausa.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="pausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 529.0
margin_top = 296.0
margin_right = 751.0
margin_bottom = 424.0

[node name="continuar" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 222.0
margin_bottom = 40.0
focus_neighbour_top = NodePath("../salir")
focus_neighbour_bottom = NodePath("../reiniciar")
custom_fonts/font = SubResource( 1 )
text = "Continuar"
flat = true

[node name="reiniciar" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 222.0
margin_bottom = 84.0
rect_min_size = Vector2( 222, 0 )
focus_neighbour_top = NodePath("../continuar")
focus_neighbour_bottom = NodePath("../salir")
custom_fonts/font = SubResource( 1 )
text = "Reiniciar"
flat = true

[node name="salir" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 222.0
margin_bottom = 128.0
rect_min_size = Vector2( 222, 0 )
focus_neighbour_top = NodePath("../reiniciar")
focus_neighbour_bottom = NodePath("../continuar")
custom_fonts/font = SubResource( 1 )
text = "Salir"
flat = true

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/salir" to="." method="_on_salir_pressed"]
